# obsidian-supernote-sync

./: .env.example  .gitignore  PLAN.md  README.md  SETUP.md  SNAPSHOT.yaml  STEP1_SUMMARY.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  FRONTMATTER_PROPERTIES.md  FRONTMATTER_VISUAL_GUIDE.md  GLOSSARY.md  IMPLEMENTATION_STATUS.md  INDEX.md  OWNERSHIP.md  PANDOC_SETUP.md  PHASES.md  ROADMAP.md  STEP1_DOCUMENTATION_INDEX.md  STEP1_REQUIREMENTS.md  STEP1_SUMMARY.md  STEP2_SUMMARY.md  TESTING_NOTES.md  WEASYPRINT_SETUP.md
docs/__bases__/: Changes.base  Features.base  Issues.base  Requirements.base  Risks.base  Tasks.base  Tests.base  Workflows.base
docs/__templates__/: SCHEMAS.md  change.md
docs/changes/: CHG-20260128-Frontmatter-Properties.md  CHG-20260129-Step2-Update-Mode.md  CHG-20260130-Phase3A-Backend-API.md  CHG-20260131-Phase3B-Web-Dashboard.md
docs/decisions/: ADR-0001-Frontmatter-Approach.md  ADR-0002-Hybrid-UI-Architecture.md  ADR-0003-Device-Recognition.md
docs/features/: FEAT-0001-Manual-CLI-Frontmatter.md  FEAT-0002-Python-Backend-API.md  FEAT-0003-Web-Dashboard-MVP.md  FEAT-0004-Obsidian-Plugin.md  FEAT-0005-Visual-Workflow-Builder.md  FEAT-0006-Cloud-Integration.md
docs/requirements/: REQ-0001-Frontmatter-Parsing.md  REQ-0002-Update-Mode.md  REQ-0003-REST-API.md  REQ-0004-Web-Dashboard.md  REQ-0005-Obsidian-Plugin.md  REQ-0006-Visual-Workflow-Builder.md
docs/risks/: RISK-0001-Note-File-Corruption.md  RISK-0002-Data-Loss-Conflicts.md  RISK-0003-Cloud-API-Dependency.md
docs/tasks/: TASK-0001-Frontmatter-Parsing.md  TASK-0002-Update-Mode.md  TASK-0003-Realtime-Support.md  TASK-0004-Configuration-Examples.md  TASK-0005-FastAPI-Server.md  TASK-0006-Conversion-Endpoints.md  TASK-0007-WebSocket-Support.md  TASK-0008-Workflow-Endpoints.md  TASK-0009-React-Setup.md  TASK-0010-Workflow-UI.md  (+2 more)
examples/: README.md  config.example.yml  sample.md
obsidian-plugin/: .gitignore  manifest.json  package-lock.json  package.json  styles.css
obsidian_supernote/: __init__.py  cli.py
tests/: test_basic.py  test_frontmatter_parsing.py  test_markdown_to_pdf.py  test_note_parser.py  test_pandoc_converter.py
tools/skills/: README.md
web-dashboard/: README.md  package-lock.json  package.json  vite.config.ts
(+90 files in other folders)
